--- a/apache-sling-servlet-helpers/build.gradle
+++ b/apache-sling-servlet-helpers/build.gradle
@@ -1,45 +1,34 @@
 
-// Build.gradle generated for instrumentation module apache-sling
+// Build.gradle generated for instrumentation module apache-sling-servlet-helpers
 
 apply plugin: 'java'
 
 dependencies {
-   // Declare a dependency on each JAR you want to instrument
-   // Example:
-   // implementation 'javax.servlet:servlet-api:2.5'
-
-   // New Relic Java Agent dependencies
  
    implementation  'org.apache.sling:org.apache.sling.api:2.27.2'
-   implementation  'org.apache.sling:org.apache.sling.engine:2.15.6'
+   implementation  'org.apache.sling:org.apache.sling.servlet-helpers:1.4.2'
    implementation  'javax.servlet:javax.servlet-api:3.1.0'
-  
-  
-   
    
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
    implementation fileTree(include: ['*.jar'], dir: '../test-lib')
+  
 }
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-servlet-helpers'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
-    attributes 'Implementation-Version': 1.1
+    attributes 'Implementation-Version': 1.0
   }
 }
 
 verifyInstrumentation {
-    passes("org.apache.sling:org.apache.sling.engine:[2.15.6,)") {
-        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
+   passes("org.apache.sling:org.apache.sling.servlet-helpers:[1.4.2,)") {
         compile 'javax.servlet:javax.servlet-api:3.1.0'
-
+        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
     }
     
-  
 }
-
- 
