--- a/apache-sling-servlets-post/build.gradle
+++ b/apache-sling-servlets-post/build.gradle
@@ -1,21 +1,13 @@
 
-// Build.gradle generated for instrumentation module apache-sling
+// Build.gradle generated for instrumentation module apache-sling-servlets-post
 
 apply plugin: 'java'
 
 dependencies {
-   // Declare a dependency on each JAR you want to instrument
-   // Example:
-   // implementation 'javax.servlet:servlet-api:2.5'
 
-   // New Relic Java Agent dependencies
- 
+   implementation  'org.apache.sling:org.apache.sling.servlets.post:2.5.0'
    implementation  'org.apache.sling:org.apache.sling.api:2.27.2'
-   implementation  'org.apache.sling:org.apache.sling.engine:2.15.6'
    implementation  'javax.servlet:javax.servlet-api:3.1.0'
-  
-  
-   
    
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
@@ -25,21 +17,18 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-servlets-post'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
-    attributes 'Implementation-Version': 1.1
+    attributes 'Implementation-Version': 1.0
   }
 }
 
 verifyInstrumentation {
-    passes("org.apache.sling:org.apache.sling.engine:[2.15.6,)") {
-        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
+    passes("org.apache.sling:org.apache.sling.servlets.post:[2.5.0,)") {
         compile 'javax.servlet:javax.servlet-api:3.1.0'
-
+        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
     }
     
   
 }
-
- 
