Iteration 3 Changes part1

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,7 @@ include 'apache-sling-api'
 include 'apache-sling-servlet-helpers'
 include 'apache-sling-servlets-get'
 include 'apache-sling-servlets-post'
+include 'apache-sling-distribution-api'
+include 'apache-sling-distribution-core'
+include 'apache-sling-model'
+include 'apache-sling-provisioning-model'
