--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,5 @@ include 'apache-sling-distribution-api'
 include 'apache-sling-distribution-core'
 include 'apache-sling-model'
 include 'apache-sling-provisioning-model'
+include 'apache-sling-event'
+include 'apache-sling-scripting'
