--- a/apache-sling-scripting/build.gradle
+++ b/apache-sling-scripting/build.gradle
@@ -7,7 +7,7 @@ dependencies {
 	implementation 'org.apache.sling:org.apache.sling.scripting.core:2.2.0'
 	implementation  'javax.servlet:javax.servlet-api:3.1.0'
 	// https://mvnrepository.com/artifact/org.apache.sling/org.apache.sling.api
-	compileOnly group: 'org.apache.sling', name: 'org.apache.sling.api', version: '2.22.0'
+	compileOnly 'org.apache.sling:org.apache.sling.api:2.22.0'
 	
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
@@ -26,9 +26,7 @@ jar {
 }
 
 verifyInstrumentation {
-  // Verifier plugin documentation:
-  // https://github.com/newrelic/newrelic-gradle-verify-instrumentation
-  // Example:
-  // passes 'javax.servlet:servlet-api:[2.2,2.5]'
-  // exclude 'javax.servlet:servlet-api:2.4.public_draft'
+  passes('org.apache.sling:org.apache.sling.scripting.core:[2.2.0,)') {
+  	compile 'org.apache.sling:org.apache.sling.api:2.22.0'
+  }
 }
