--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'java-instrumentation-template'
 include 'apache-sling'
+include 'apache-sling-3.0'
 include 'apache-sling-api'
 include 'apache-sling-servlet-helpers'
 include 'apache-sling-servlets-get'
