--- a/apache-sling-api-3.0/build.gradle
+++ b/apache-sling-api-3.0/build.gradle
@@ -10,11 +10,9 @@ dependencies {
 
    // New Relic Java Agent dependencies
  
-   implementation  'org.apache.sling:org.apache.sling.api:2.27.2'
-   implementation  'org.apache.sling:org.apache.sling.engine:2.15.6'
-   implementation  'javax.servlet:javax.servlet-api:3.1.0'
-  
-  
+   implementation  'org.apache.sling:org.apache.sling.api:3.0.0'
+   implementation  'org.apache.sling:org.apache.sling.engine:3.0.0'
+   implementation  'jakarta.servlet:jakarta.servlet-api:6.0.0'
    
    
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
@@ -25,21 +23,15 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-api-3.0'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
-    attributes 'Implementation-Version': 1.1
+    attributes 'Implementation-Version': 1.0
   }
 }
 
 verifyInstrumentation {
-    passes("org.apache.sling:org.apache.sling.engine:[2.15.6,3.0.0)") {
-        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
-        compile 'javax.servlet:javax.servlet-api:3.1.0'
-
+  passes("org.apache.sling:org.apache.sling.api:[3.0.0,)") {
+        compile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     }
-    
-  
 }
-
- 
