--- a/apache-sling-scripting-3.0/build.gradle
+++ b/apache-sling-scripting-3.0/build.gradle
@@ -4,8 +4,8 @@
 apply plugin: 'java'
 
 dependencies {
-	implementation 'org.apache.sling:org.apache.sling.scripting.core:2.2.0'
-	implementation  'javax.servlet:javax.servlet-api:3.1.0'
+	implementation 'org.apache.sling:org.apache.sling.scripting.core:3.0.0'
+   implementation  'jakarta.servlet:jakarta.servlet-api:6.0.0'
 	// https://mvnrepository.com/artifact/org.apache.sling/org.apache.sling.api
 	compileOnly 'org.apache.sling:org.apache.sling.api:2.22.0'
 	
@@ -18,7 +18,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-scripting'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-scripting-3.0.0'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
@@ -26,7 +26,8 @@ jar {
 }
 
 verifyInstrumentation {
-  passes('org.apache.sling:org.apache.sling.scripting.core:[2.2.0,3.0.0)') {
+  passes('org.apache.sling:org.apache.sling.scripting.core:[3.0.0,)') {
   	compile 'org.apache.sling:org.apache.sling.api:2.22.0'
+  	compile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
   }
 }
