--- a/apache-sling-servlets-get-3.0/build.gradle
+++ b/apache-sling-servlets-get-3.0/build.gradle
@@ -4,9 +4,9 @@
 apply plugin: 'java'
 
 dependencies {
-   implementation  'org.apache.sling:org.apache.sling.servlets.get:2.1.44'
-   implementation  'org.apache.sling:org.apache.sling.api:2.27.2'
-   implementation  'javax.servlet:javax.servlet-api:3.1.0'
+   implementation  'org.apache.sling:org.apache.sling.servlets.get:3.0.0'
+   implementation  'org.apache.sling:org.apache.sling.api:3.0.0'
+   implementation  'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
@@ -17,7 +17,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-servlets-get'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.apache-sling-servlets-get-3.0'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
@@ -25,9 +25,9 @@ jar {
 }
 
 verifyInstrumentation {
-    passes("org.apache.sling:org.apache.sling.servlets.get:[2.1.44,3.0.0)") {
-        compile 'javax.servlet:javax.servlet-api:3.1.0'
-        compile 'org.apache.sling:org.apache.sling.api:2.27.2'
+    passes("org.apache.sling:org.apache.sling.servlets.get:[3.0.0,)") {
+        compile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+        compile 'org.apache.sling:org.apache.sling.api:3.0.0'
  }
     
   
