--- a/apache-sling-3.0/build.gradle
+++ b/apache-sling-3.0/build.gradle
@@ -3,6 +3,11 @@
 
 apply plugin: 'java'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 dependencies {
    // Declare a dependency on each JAR you want to instrument
    // Example:
